# CodeCraft2024

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.back  a_star_path.cpp  a_star_path.h  berth.h  berth.hpp  bfs.hpp  come_from_map.hpp  config.h  direction.hpp  game_map.cpp  game_map.h  game_map.hpp  goods.cpp  goods.h  goods.hpp  io_laye_new.hpp  io_layer.cpp  io_layer.h  io_layer.hpp  log.cpp  log.h  main.cpp  makefile  mananger.cpp  mananger.h  mananger.hpp  mananger_new.hpp  path_helper.hpp  point.h  point.hpp  robot.cpp  robot.h  robot.hpp  robot_collision_avoid.hpp  robot_control.hpp  shell.nix  ship.h  (+7 more)
script/: benchmark.py
